[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
elliptic-curve = { version = "0.13", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
base64ct = { version = "1.6", features = ["alloc"] }

# ИСПРАВЛЕНИЕ ЗДЕСЬ: Добавляем features = ["simple"]
pbkdf2 = { version = "0.12", features = ["simple"] }

rand = { version = "0.8", features = ["getrandom"] }